
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_appearance">

        <ListPreference
            app:key="theme_color"
            app:title="@string/settings_theme_color_title"
            app:summary="@string/settings_theme_color_summary"
            app:defaultValue="brown"
            app:entries="@array/theme_color_entries"
            app:entryValues="@array/theme_color_values"
            app:icon="@drawable/ic_settings_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_about">

        <Preference
            app:key="about"
            app:title="@string/settings_category_about"
            app:summary="@string/about_version"
            app:icon="@drawable/ic_share" />

    </PreferenceCategory>

</PreferenceScreen>

  